# risk-neutral-monte-carlo

./: .gitignore  Makefile  README.md  benchmark_jax.py  final_project.ipynb  final_project.qmd  final_project_jax.qmd  gbm.py  pyproject.toml
tests/: notebook_helpers.py  test_gbm.py  test_notebook_functions.py
